<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notes</string>
    <string name="password_circle_1" translatable="false">first password circle</string>
    <string name="password_circle_2" translatable="false">second password circle</string>
    <string name="password_circle_3" translatable="false">third password circle</string>
    <string name="password_circle_4" translatable="false">fourth password circle</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="enter_pin">Enter pin:</string>
    <string name="enter_new_pin">Enter new pin:</string>
    <string name="confirm_pin">Confirm pin:</string>
    <string name="save">Save</string>
    <string name="pin_hint" translatable="false">1234</string>
    <string name="cancel">Cancel</string>
    <string name="use_fingerprint_to_login">You can use fingerprint to login</string>
    <string name="dialog_title_fingerprint">Use fingerprint</string>
    <string name="dialog_title_biometric">Use biometric</string>
    <string name="dialog_message_fingerprint">Do you want to use fingerprint?</string>
    <string name="dialog_message_biometric">Do you want to use biometric?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wrong_pin">Wrong pin</string>
    <string name="title">Title</string>
    <string name="note_text">Note text</string>
    <string name="has_deadline">Has deadline</string>
    <string name="hint_date" translatable="false">dd/mm/yyyy</string>
    <string name="date_format" translatable="false">%1$2s/%2$2s/%3$4s</string>
    <string name="show_the_whole_text" tools:ignore="TypographyEllipsis">... (Tap to show the whole note)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="note">Note</string>
    <string name="deadline">Deadline: </string>
    <string name="biometric_login">Login using biometric</string>
    <string name="authentication_failed">Authentication failed. Try again</string>
    <string name="authentication_error">Authentication error: </string>
    <string name="no_apps_to_share">No apps to share</string>
    <string name="warning">Warning</string>
    <string name="delete_warning_message">Are you sure you want to delete this note?</string>
    <string name="pin_match">This pin is already in use</string>
</resources>