<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateOrEditNoteActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/titleEdtTxtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textEdtTxtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/note_text"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="200dp" />

            <CheckBox
                android:id="@+id/hasDeadlineCheckboxId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/has_deadline"
                tools:checked="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/deadlineEdtTxtId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:digits="0123456789/"
                    android:enabled="false"
                    android:hint="@string/hint_date"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/calendarBtnId"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/calendarBtnId"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="@drawable/btn_calendar"
                    android:enabled="false"
                    app:layout_constraintBaseline_toBaselineOf="@id/deadlineEdtTxtId"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/deadlineEdtTxtId" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/saveNoteBtnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/save_btn_color"
                android:enabled="false"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancelBtnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/cancel_btn_color"
                android:text="@string/cancel" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>