<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <TextView
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:id="@+id/enterNewPinTxtViewId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_pin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarId"
        app:layout_constraintBottom_toTopOf="@id/newPinEdtTxtId"/>

    <EditText
        android:layout_marginVertical="8dp"
        android:id="@+id/newPinEdtTxtId"
        android:layout_marginStart="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="4"
        android:maxLength="4"
        android:digits="0123456789"
        android:textSize="24sp"
        android:hint="@string/pin_hint"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toStartOf="@id/showNewPinBtnId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNewPinTxtViewId"
        app:layout_constraintBottom_toTopOf="@id/confirmPinTxtViewId"
        android:importantForAutofill="no" />

    <ToggleButton
        android:id="@+id/showNewPinBtnId"
        android:layout_marginEnd="16dp"
        android:layout_width="@dimen/show_btn_width"
        android:layout_height="@dimen/show_btn_height"
        app:layout_constraintStart_toEndOf="@id/newPinEdtTxtId"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_show_hide"
        android:textOff=""
        android:textOn=""
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@id/newPinEdtTxtId"/>

    <TextView
        android:id="@+id/confirmPinTxtViewId"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPinEdtTxtId"
        app:layout_constraintBottom_toTopOf="@id/confirmPinEdtTxtId"/>

    <EditText
        android:id="@+id/confirmPinEdtTxtId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="@string/pin_hint"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/showConfirmPinBtnId"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPinTxtViewId"
        app:layout_constraintBottom_toTopOf="@id/saveBtnId"/>

    <ToggleButton
        android:id="@+id/showConfirmPinBtnId"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_show_hide"
        android:layout_width="@dimen/show_btn_width"
        android:layout_height="@dimen/show_btn_height"
        android:textOff=""
        android:textOn=""
        android:text=""
        app:layout_constraintStart_toEndOf="@id/confirmPinEdtTxtId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/confirmPinEdtTxtId"/>

    <Button
        android:id="@+id/saveBtnId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@color/save_btn_color"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/confirmPinEdtTxtId"
        app:layout_constraintBottom_toTopOf="@id/cancelBtnId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:enabled="true" />

    <Button
        android:id="@+id/cancelBtnId"
        android:background="@color/cancel_btn_color"
        android:layout_marginHorizontal="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBtnId"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>